# cmake-depcheck

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  action.yml  eslint.config.mjs  package-lock.json  package.json  rollup.config.ts  tsconfig.build.json  tsconfig.json
.github/: dependabot.yml  release-please-config.json
.github/workflows/: ci.yml  publish.yml  release-action.yml
src/: action.ts  cli.ts  cmake-utils.ts  constants.ts  index.ts  scan.ts  update-types.ts
src/checker/: git-tags.ts  github-url.ts  index.ts  types.ts  version-checker.ts  version-compare.ts
src/formatter/: index.ts  json-formatter.ts
src/parser/: cmake-parser.ts  index.ts  types.ts
src/pr/: cleanup.ts  edit-compute.ts  edit-marker.ts  github.ts  index.ts  release-notes.ts  updater.ts
src/scanner/: chain-resolver.ts  file-scanner.ts  index.ts
tests/: action.test.ts  cli.test.ts  scan.test.ts  update-types.test.ts
tests/checker/: git-tags.test.ts  github-url.test.ts  version-checker.test.ts  version-compare.test.ts
tests/fixtures/basic-git/: CMakeLists.txt
tests/fixtures/basic-url/: CMakeLists.txt
tests/fixtures/case-variations/: CMakeLists.txt
tests/fixtures/chain-basic/: CMakeLists.txt
tests/fixtures/chain-basic/libs/networking/: CMakeLists.txt
tests/fixtures/chain-builtin-vars/: CMakeLists.txt
tests/fixtures/chain-builtin-vars/libs/engine/: CMakeLists.txt
tests/fixtures/chain-circular/: CMakeLists.txt
tests/fixtures/chain-circular/cmake/: a.cmake  b.cmake
tests/fixtures/chain-include-no-extension/: CMakeLists.txt
tests/fixtures/chain-list-dir-vs-source-dir/: CMakeLists.txt
tests/fixtures/chain-list-dir-vs-source-dir/cmake/: setup.cmake
tests/fixtures/chain-missing-file/: CMakeLists.txt
tests/fixtures/chain-nested/: CMakeLists.txt
tests/fixtures/chain-nested/libs/engine/: CMakeLists.txt
tests/fixtures/chain-nested/libs/engine/cmake/: deps.cmake
tests/fixtures/chain-project-source-dir/: CMakeLists.txt
tests/fixtures/chain-project-source-dir/cmake/: deps.cmake
tests/fixtures/chain-sequential-includes/: CMakeLists.txt
tests/fixtures/chain-sequential-includes/cmake/: second.cmake
tests/fixtures/chain-unresolvable/: CMakeLists.txt
tests/fixtures/chain-unresolvable-var/: CMakeLists.txt
tests/fixtures/chain-unresolvable/libs/real/: CMakeLists.txt
tests/fixtures/chain-variable-deps/: CMakeLists.txt
tests/fixtures/chain-variables/: CMakeLists.txt
tests/fixtures/cmake-variables/: CMakeLists.txt
tests/fixtures/commit-sha/: CMakeLists.txt
tests/fixtures/fetchcontent-populate/: CMakeLists.txt
tests/fixtures/messy-formatting/: CMakeLists.txt
tests/fixtures/mixed-sources/: CMakeLists.txt
tests/fixtures/nested-subdirs/: CMakeLists.txt
tests/fixtures/nested-subdirs/libs/graphics/: CMakeLists.txt
tests/fixtures/no-fetchcontent/: CMakeLists.txt
tests/fixtures/quoted-args/: CMakeLists.txt
tests/fixtures/sha-in-variable/: CMakeLists.txt  Versions.cmake
tests/fixtures/with-excluded-dirs/: CMakeLists.txt
tests/formatter/: json-formatter.test.ts
tests/parser/: cmake-parser.test.ts
tests/pr/: cleanup.test.ts  edit-compute.test.ts  edit-marker.test.ts  github.test.ts  index.test.ts  release-notes.test.ts  updater.test.ts
tests/scanner/: chain-resolver.test.ts  file-scanner.test.ts  scan-integration.test.ts  variable-resolution.test.ts
